[tool.poetry]
name = "tomato-blocks"
version = "1.0.0"
description = "Tomato timer"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tomato_blocks" }]

[tool.poetry.scripts]
tomato = "tomato_blocks.main:app"

[tool.poetry.dependencies]
python = "3.12"
schedule = "^1.2.1"
typer = "^0.12.3"
rich = "^13.7.1"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
tabulate = "^0.9.0"
pre-commit = "^3.7.0"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
refurb = "^2.0.0"
ruff = "^0.4.1"

# ---------- Configurations ---------- #

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B311", "B404", "B602", "B603", "B607"]

[tool.codespell]
skip = '*.css.map,*.ipynb'
ignore-words-list = "astroid,aNULL,ANULL,anull"
check-filenames = true
# count = ""
# quiet-level = 3

[tool.mypy]
pretty = true
ignore_missing_imports = true
# strict = true
allow_untyped_defs = true
check_untyped_defs = false
warn_return_any = false

[tool.refurb]
enable_all = true
disable = ["FURB109"]


[tool.ruff]
line-length = 120
ignore = []

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# isort, refurb, pyupgrade, prefer pathlib
extend-select = ["I", "FURB", "UP", "PTH"]
preview = true


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
